# Llava-Model-Video-Feed

./: .gitignore  CMakeLists.txt  README.md
LlavaWebCam/: CMakeLists.txt  LlavaWebCam.cpp  LlavaWebCam.h
